# all2txt

./: README.md  README.ru.md  pyproject.toml
.github/workflows/: publish.yml
src/all2txt/: __init__.py  cli.py  core.py  extractors.py  models.py
src/all2txt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/all2txt_ocr_plugin/: __init__.py
tests/: test_smoke.py
